--- a/index.html
+++ b/index.html
@@ -35,13 +35,20 @@
       --maxw: 1100px;
     }
     @media (prefers-color-scheme: light){
-      :root{
+      :root:not([data-theme]){
         --bg: #f8fafc;
         --panel: #ffffff;
         --muted: #475569;
         --text: #0f172a;
         --shadow: 0 8px 24px rgba(15,23,42,0.08);
       }
+    }
+    :root[data-theme="dark"]{
+      --bg: #0b1220;
+      --panel: #0f172a;
+      --muted: #94a3b8;
+      --text: #e2e8f0;
+      --shadow: 0 10px 30px rgba(2,8,23,0.45);
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
