--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
   <style>
     :root{
-      --bg: #0b1220;
-      --panel: #0f172a;
+      --bg: #0a0e1a;
+      --panel: #0f1419;
       --muted: #94a3b8;
       --text: #e2e8f0;
       --accent: #22d3ee;
       --accent-2: #a78bfa;
       --ring: rgba(34,211,238,0.35);
       --radius: 14px;
-      --shadow: 0 10px 30px rgba(2,8,23,0.45);
+      --shadow: 0 10px 30px rgba(2,8,23,0.6);
       --maxw: 1100px;
     }
     @media (prefers-color-scheme: light){
@@ -44,11 +44,11 @@
       }
     }
     :root[data-theme="dark"]{
-      --bg: #0b1220;
-      --panel: #0f172a;
+      --bg: #0a0e1a;
+      --panel: #0f1419;
       --muted: #94a3b8;
       --text: #e2e8f0;
-      --shadow: 0 10px 30px rgba(2,8,23,0.45);
+      --shadow: 0 10px 30px rgba(2,8,23,0.6);
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
@@ -221,8 +221,8 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <button class="theme-toggle" id="themeBtn" aria-label="Toggle dark mode">
-        <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M21 12a9 9 0 1 1-9-9 7 7 0 0 0 9 9z"/></svg>
+      <button class="theme-toggle" id="themeBtn" aria-label="Toggle theme">
+        <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M21.64 13a1 1 0 0 0-1.05-.14 8.05 8.05 0 0 1-3.37.73A8.15 8.15 0 0 1 9.08 5.49a8.59 8.59 0 0 1 .25-2A1 1 0 0 0 8 2.36a10.14 10.14 0 1 0 14 11.69 1 1 0 0 0-.36-1.05zm-9.5 6.69A8.14 8.14 0 0 1 7.08 5.22v.27A10.15 10.15 0 0 0 17.22 15.63a9.79 9.79 0 0 0 2.1-.22 8.11 8.11 0 0 1-7.18 4.32z"/></svg>
       </button>
     </div>
   </header>
@@ -484,11 +484,31 @@
 
     // Theme toggle (persisted)
     const themeBtn = document.getElementById('themeBtn');
-    const applyTheme = t => document.documentElement.dataset.theme = t;
+    const applyTheme = t => {
+      document.documentElement.dataset.theme = t;
+      // Update icon based on current theme
+      const icon = themeBtn.querySelector('svg path');
+      if (t === 'light') {
+        // Show moon icon for light mode (to switch to dark)
+        icon.setAttribute('d', 'M21.64 13a1 1 0 0 0-1.05-.14 8.05 8.05 0 0 1-3.37.73A8.15 8.15 0 0 1 9.08 5.49a8.59 8.59 0 0 1 .25-2A1 1 0 0 0 8 2.36a10.14 10.14 0 1 0 14 11.69 1 1 0 0 0-.36-1.05zm-9.5 6.69A8.14 8.14 0 0 1 7.08 5.22v.27A10.15 10.15 0 0 0 17.22 15.63a9.79 9.79 0 0 0 2.1-.22 8.11 8.11 0 0 1-7.18 4.32z');
+      } else {
+        // Show sun icon for dark mode (to switch to light)
+        icon.setAttribute('d', 'M21 12a9 9 0 1 1-9-9 7 7 0 0 0 9 9z');
+      }
+    };
+    
+    // Set default theme to dark if no saved preference
     const saved = localStorage.getItem('theme');
-    if (saved) applyTheme(saved);
+    if (saved) {
+      applyTheme(saved);
+    } else {
+      // Default to dark mode
+      applyTheme('dark');
+    }
+    
     themeBtn?.addEventListener('click', () => {
-      const next = document.documentElement.dataset.theme === 'light' ? 'dark' : 'light';
+      const current = document.documentElement.dataset.theme || 'dark';
+      const next = current === 'light' ? 'dark' : 'light';
       applyTheme(next);
       localStorage.setItem('theme', next);
     });
