--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     "name": "S M Mahidur Rahman",
     "jobTitle": "Student",
     "description": "Personal portfolio website.",
-    "image": "images/profile.jpg",
+    "image": "profile.jpg",
     "url": "",
     "email": "mailto:your.email@example.com",
     "sameAs": [
@@ -253,7 +253,7 @@
         </div>
 
         <div class="photo card" aria-label="Profile photo">
-          <img src="images/profile.jpg" alt="Portrait of S M Mahidur Rahman" />
+          <img src="profile.jpg" alt="Portrait of S M Mahidur Rahman" />
         </div>
       </section>
     </div>
