--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
     .btn svg{width:18px; height:18px}
 
     .photo{
-      aspect-ratio:1/1; overflow:hidden; border-radius:20px; margin:6px; background:#0002;
+      aspect-ratio:3/4; overflow:hidden; border-radius:20px; margin:6px; background:#0002;
       display:grid; place-items:center; position:relative;
     }
-    .photo img{width:100%; height:100%; object-fit:cover}
+    .photo img{width:100%; height:100%; object-fit:cover; border-radius:20px}
     .chip-row{display:flex; flex-wrap:wrap; gap:8px; margin-top:14px}
     .chip{font-size:.85rem; padding:6px 10px; border-radius:999px; background:color-mix(in oklab, var(--text) 8%, transparent); border:1px solid color-mix(in oklab, var(--text) 10%, transparent); font-weight:500}
 
