--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@
     "url": "",
     "email": "mailto:your.email@example.com",
     "sameAs": [
-      "https://github.com/YOUR_GITHUB",
-      "https://www.linkedin.com/in/YOUR_LINKEDIN"
+      "https://github.com/MahidurSakib",
+      "https://www.linkedin.com/in/s-m-mahidur-rahman-59086a338/",
+      "https://www.facebook.com/mahidursakib"
     ]
   }
   </script>
@@ -231,14 +232,14 @@
     <div class="wrap">
       <section class="hero" id="top" aria-labelledby="hero-title">
         <div class="card intro">
-          <div class="kicker">Hello! I'm</div>
+          <div class="kicker">Hey There! I'm</div>
           <h1 id="hero-title">S M Mahidur Rahman</h1>
-          <p class="tagline">Student • Portfolio (edit this line to your field)</p>
+          <p class="tagline">An Undergrad student. Currently pursuing my B.Sc. in Computer Science from Brac University</p>
 
           <div class="chip-row" aria-label="Highlights">
-            <span class="chip">Communication</span>
-            <span class="chip">Teamwork</span>
-            <span class="chip">Problem Solving</span>
+            <span class="chip">Student</span>
+            <span class="chip">High Ambitious</span>
+            <span class="chip">Dedicated</span>
           </div>
 
           <div class="cta">
@@ -427,21 +428,17 @@
             <h3>Social</h3>
             <p class="sub">Connect with me</p>
             <div class="socials">
-              <a class="icon-btn" href="https://github.com/YOUR_GITHUB" target="_blank" rel="noopener" aria-label="GitHub">
+              <a class="icon-btn" href="https://github.com/MahidurSakib" target="_blank" rel="noopener" aria-label="GitHub">
                 <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 2a10 10 0 0 0-3.16 19.49c.5.09.68-.22.68-.48v-1.7c-2.78.61-3.37-1.19-3.37-1.19-.45-1.14-1.11-1.44-1.11-1.44-.91-.63.07-.62.07-.62 1 .07 1.52 1.03 1.52 1.03.9 1.53 2.36 1.09 2.94.83.09-.66.35-1.1.63-1.35-2.22-.26-4.55-1.11-4.55-4.95a3.9 3.9 0 0 1 1.04-2.71 3.63 3.63 0 0 1 .1-2.67s.84-.27 2.75 1.02a9.5 9.5 0 0 1 5 0c1.9-1.29 2.74-1.02 2.74-1.02.37.86.4 1.84.1 2.71a3.9 3.9 0 0 1 1.03 2.71c0 3.85-2.33 4.68-4.56 4.93.36.3.67.89.67 1.8v2.66c0 .26.18.57.68.47A10 10 0 0 0 12 2z"/></svg>
                 GitHub
               </a>
-              <a class="icon-btn" href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener" aria-label="LinkedIn">
+              <a class="icon-btn" href="https://www.linkedin.com/in/s-m-mahidur-rahman-59086a338/" target="_blank" rel="noopener" aria-label="LinkedIn">
                 <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M6.94 6.5A2.44 2.44 0 1 1 4.5 4.06 2.44 2.44 0 0 1 6.94 6.5zM4.75 8.75h4.34v10.5H4.75zM13 8.75h4.16v1.53h.06A4.56 4.56 0 0 1 22 14.98v4.27h-4.34v-3.78c0-.9-.02-2.06-1.26-2.06s-1.45.98-1.45 2v3.84H10.6V8.75H13z"/></svg>
                 LinkedIn
               </a>
-              <a class="icon-btn" href="#" target="_blank" rel="noopener" aria-label="Twitter">
-                <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M17.2 3H20l-6.5 7.43L21 21h-6.55l-5.12-6-5.87 6H1.7l7-7.49L3 3h6.65l4.63 5.38zM15.28 19h1.82L8.8 5H6.87z"/></svg>
-                X/Twitter
-              </a>
-              <a class="icon-btn" href="#" target="_blank" rel="noopener" aria-label="Instagram">
-                <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm5 3.5A5.5 5.5 0 1 1 6.5 13 5.5 5.5 0 0 1 12 7.5m0 2A3.5 3.5 0 1 0 15.5 13 3.5 3.5 0 0 0 12 9.5M18 6.3a1 1 0 1 1-1 1 1 1 0 0 1 1-1"/></svg>
-                Instagram
+              <a class="icon-btn" href="https://www.facebook.com/mahidursakib" target="_blank" rel="noopener" aria-label="Facebook">
+                <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                Facebook
               </a>
             </div>
           </div>
