--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     "description": "Personal portfolio website.",
     "image": "profile.jpg",
     "url": "",
-    "email": "mailto:your.email@example.com",
+    "email": "mailto:mahidursakib@gmail.com",
     "sameAs": [
       "https://github.com/MahidurSakib",
       "https://www.linkedin.com/in/s-m-mahidur-rahman-59086a338/",
@@ -418,7 +418,7 @@
                   <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="m2 21 21-9L2 3v7l15 2-15 2z"/></svg>
                   Send
                 </button>
-                <a class="btn ghost" href="mailto:your.email@example.com">Email directly</a>
+                <a class="btn ghost" href="mailto:mahidursakib@gmail.com">Email directly</a>
               </div>
               <small class="sub">This form opens your email app with a pre‑filled message (no server needed).</small>
             </form>
@@ -529,7 +529,7 @@
       const email = document.getElementById('email').value.trim();
       const msg = document.getElementById('msg').value.trim();
       if(!name || !email || !msg) return false;
-      const to = 'your.email@example.com'; // <-- change this to your real email
+      const to = 'mahidursakib@gmail.com';
       const subject = encodeURIComponent(`Portfolio message from ${name}`);
       const body = encodeURIComponent(`Name: ${name}\nEmail: ${email}\n\n${msg}`);
       window.location.href = `mailto:${to}?subject=${subject}&body=${body}`;
