--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     .sub{color:var(--muted); font-size:.95rem; font-weight:400}
 
     .grid{display:grid; gap:16px}
-    .grid.cols-2{grid-template-columns:1fr 1fr}
+    .grid.cols-2{grid-template-columns:1.2fr 0.8fr}
     .grid.cols-3{grid-template-columns:repeat(3, 1fr)}
     @media (max-width:960px){ .grid.cols-3{grid-template-columns:1fr 1fr} }
     @media (max-width:700px){ .grid.cols-2, .grid.cols-3{grid-template-columns:1fr} }
@@ -240,6 +240,7 @@
             <span class="chip">Student</span>
             <span class="chip">High Ambitious</span>
             <span class="chip">Dedicated</span>
+            <span class="chip">Progressive Learner</span>
           </div>
 
           <div class="cta">
@@ -269,12 +270,7 @@
         </div>
         <div class="panel">
           <p>
-            Hi, I'm S M Mahidur Rahman. This is a quick starter portfolio. Replace this paragraph with a brief
-            introduction—who you are, what you’re studying/working on, and what you’re looking for.
-          </p>
-          <p>
-            Add a second paragraph with interests or values, e.g., “I like solving real-world problems, learning
-            new tools fast, and collaborating on meaningful projects.”
+            Hey there. I am S M Mahidur Rahman, a Computer Science student with a deep passion for technology, innovation, and problem-solving. I enjoy exploring how software and systems can be designed to make everyday life smarter and more efficient. My academic journey has helped me build strong foundations in programming, algorithms, and digital systems, and I'm always eager to apply what I learn to real-world projects. I believe in continuous growth, creativity, and collaboration — qualities that drive me to keep improving and contributing to the ever-evolving world of technology.
           </p>
         </div>
       </div>
@@ -420,7 +416,6 @@
                 </button>
                 <a class="btn ghost" href="mailto:mahidursakib@gmail.com">Email directly</a>
               </div>
-              <small class="sub">This form opens your email app with a pre‑filled message (no server needed).</small>
             </form>
           </div>
 
