--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 
     section{padding:34px 0}
     section .head{display:flex; align-items:end; justify-content:space-between; gap:10px; margin-bottom:16px}
-    h2{margin:0; font-size: clamp(24px, 3.2vw, 32px); font-weight:600; letter-spacing:-.01em}
-    #about h2{background:linear-gradient(135deg, var(--accent), var(--accent-2)); -webkit-background-clip:text; -webkit-text-fill-color:transparent; background-clip:text; font-weight:700}
+    h2{margin:0; font-size: clamp(24px, 3.2vw, 32px); background:linear-gradient(135deg, var(--accent), var(--accent-2)); -webkit-background-clip:text; -webkit-text-fill-color:transparent; background-clip:text; font-weight:700; letter-spacing:-.01em}
     .sub{color:var(--muted); font-size:.95rem; font-weight:400}
 
     .grid{display:grid; gap:16px}
@@ -268,7 +267,7 @@
     <section id="about" aria-labelledby="about-head">
       <div class="wrap">
         <div class="head">
-          <h2 id="about-head">About me</h2>
+          <h2 id="about-head">About Me</h2>
           <div class="sub">A short intro</div>
         </div>
         <div class="panel">
@@ -290,9 +289,22 @@
           <div class="edu-item">
             <div class="dotline" aria-hidden="true"></div>
             <div class="edu-body">
-              <h3>Degree / Program — University Name</h3>
-              <small>Year–Year (or “Present”)</small>
-              <p>Highlights: relevant coursework, honors, activities.</p>
+              <h3>🎓 B.Sc. in Computer Science, Brac University</h3>
+              <small>2022 – 2025</small>
+            </div>
+          </div>
+          <div class="edu-item">
+            <div class="dotline" aria-hidden="true"></div>
+            <div class="edu-body">
+              <h3>🎓 Higher Secondary Certificate (HSC), BAF Shaheen College Dhaka</h3>
+              <small>2019 – 2020 — Science Group, GPA 5.00</small>
+            </div>
+          </div>
+          <div class="edu-item">
+            <div class="dotline" aria-hidden="true"></div>
+            <div class="edu-body">
+              <h3>🎓 Secondary School Certificate (SSC), Uttara High School & College</h3>
+              <small>2017 – 2018 — Science Group, GPA 5.00</small>
             </div>
           </div>
         </div>
