--- a/index.html
+++ b/index.html
@@ -290,21 +290,21 @@
             <div class="dotline" aria-hidden="true"></div>
             <div class="edu-body">
               <h3>🎓 B.Sc. in Computer Science, Brac University</h3>
-              <small>2022 – 2025</small>
+              <small>2022–2025</small>
             </div>
           </div>
           <div class="edu-item">
             <div class="dotline" aria-hidden="true"></div>
             <div class="edu-body">
-              <h3>🎓 Higher Secondary Certificate (HSC), BAF Shaheen College Dhaka</h3>
-              <small>2019 – 2020 — Science Group, GPA 5.00</small>
+              <h3>🎓 HSC (Science), BAF Shaheen College Dhaka</h3>
+              <small>2019–2020 — GPA 5.00</small>
             </div>
           </div>
           <div class="edu-item">
             <div class="dotline" aria-hidden="true"></div>
             <div class="edu-body">
-              <h3>🎓 Secondary School Certificate (SSC), Uttara High School & College</h3>
-              <small>2017 – 2018 — Science Group, GPA 5.00</small>
+              <h3>🎓 SSC (Science), Uttara High School & College</h3>
+              <small>2017–2018 — GPA 5.00</small>
             </div>
           </div>
         </div>
@@ -321,15 +321,15 @@
         <div class="grid cols-3">
           <div class="panel">
             <h3>Languages</h3>
-            <p>English, Bengali (edit this list)</p>
+            <p>English, Bengali, Chinese</p>
           </div>
           <div class="panel">
-            <h3>Tools</h3>
-            <p>MS Office, Google Docs, Canva (examples—edit)</p>
+            <p><strong>Programming Languages:</strong> Python, C</p>
+            <p><strong>Database Systems:</strong> MySQL, MongoDB</p>
           </div>
           <div class="panel">
-            <h3>Domains</h3>
-            <p>Customer service, content, or your field</p>
+            <p><strong>Machine Learning:</strong> TensorFlow, PyTorch</p>
+            <p><strong>Deep Learning:</strong> CNNs, RNNs</p>
           </div>
         </div>
       </div>
