--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="S M Mahidur Rahman — Portfolio" />
   <meta property="og:description" content="S M Mahidur Rahman's personal website — projects, education, skills, and contact." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/og.jpg" />
+  <meta property="og:image" content="og.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <meta name="theme-color" content="#0f172a" />
