--- a/index.html
+++ b/index.html
@@ -158,6 +158,31 @@
     .panel a.inline{display:inline-flex; align-items:center; gap:8px; text-decoration:none; font-weight:600}
     .panel a.inline:hover{text-decoration:underline}
 
+    /* CV-style Skills & Projects */
+    .cv-section{max-width:var(--maxw); margin:0 auto; padding:0 20px}
+    .cv-block{background:var(--panel); border:1px solid color-mix(in oklab, var(--text) 10%, transparent); border-radius:var(--radius); box-shadow:var(--shadow); padding:24px 28px; margin-bottom:20px}
+    .cv-block:last-child{margin-bottom:0}
+    .cv-row{display:grid; grid-template-columns:160px 1fr; gap:20px; align-items:start; padding:12px 0; border-bottom:1px solid color-mix(in oklab, var(--text) 8%, transparent)}
+    .cv-row:last-child{border-bottom:none; padding-bottom:0}
+    .cv-row:first-child{padding-top:0}
+    .cv-label{font-weight:600; font-size:.9rem; color:var(--accent); letter-spacing:.02em; margin:0}
+    .cv-value{margin:0; font-size:.95rem; line-height:1.6; color:var(--text)}
+    .cv-list{margin:0; padding-left:1.2em; list-style:disc}
+    .cv-list li{margin:.35em 0; line-height:1.5}
+    .cv-list.inline{list-style:none; padding-left:0; display:flex; flex-wrap:wrap; gap:8px}
+    .cv-list.inline li{margin:0}
+    .cv-project{border-bottom:1px solid color-mix(in oklab, var(--text) 10%, transparent); padding-bottom:20px; margin-bottom:20px}
+    .cv-project:last-child{border-bottom:none; margin-bottom:0; padding-bottom:0}
+    .cv-project-head{display:flex; flex-wrap:wrap; align-items:baseline; justify-content:space-between; gap:8px; margin-bottom:6px}
+    .cv-project-title{margin:0; font-weight:600; font-size:1.05rem; color:var(--text)}
+    .cv-project-meta{font-size:.85rem; color:var(--muted); font-weight:500}
+    .cv-project-desc{margin:0 0 8px; font-size:.95rem; line-height:1.55; color:var(--text)}
+    .cv-bullets{margin:0 0 10px; padding-left:1.2em; list-style:disc; font-size:.9rem; line-height:1.5; color:var(--text)}
+    .cv-bullets li{margin:.25em 0}
+    .cv-project-tags{display:flex; flex-wrap:wrap; gap:6px; margin-top:8px}
+    .cv-project-tags .tag{font-size:.75rem; padding:3px 8px}
+    @media (max-width:640px){ .cv-row{grid-template-columns:1fr; gap:4px} }
+
     form .row{display:grid; gap:12px; grid-template-columns:1fr 1fr}
     form .row > * {min-width:0}
     @media (max-width:700px){ form .row{grid-template-columns:1fr} }
@@ -255,7 +280,7 @@
         <div class="card intro">
           <div class="kicker">Hey There! I'm</div>
           <h1 id="hero-title">S M Mahidur Rahman</h1>
-          <p class="tagline">An Undergrad student. Currently pursuing my B.Sc. in Computer Science from Brac University</p>
+          <p class="tagline">Computer Science Graduate | AI/ML Researcher | Progressive Learner</p>
 
           <div class="chip-row" aria-label="Highlights">
             <span class="chip">Student</span>
@@ -291,7 +316,7 @@
         </div>
         <div class="panel">
           <p>
-            Hey there. I am S M Mahidur Rahman, a Computer Science student with a deep passion for technology, innovation, and problem-solving. I enjoy exploring how software and systems can be designed to make everyday life smarter and more efficient. My academic journey has helped me build strong foundations in programming, algorithms, and digital systems, and I'm always eager to apply what I learn to real-world projects. I believe in continuous growth, creativity, and collaboration — qualities that drive me to keep improving and contributing to the ever-evolving world of technology.
+            A Computer Science graduate with a deep passion for technology, innovation, and problem-solving. I am a passionate researcher and practitioner of Artificial Intelligence, Machine Learning, and Deep Learning, specializing in multimodal data analysis. My academic journey has helped me build strong foundations in programming, algorithms, and digital systems, and I am always eager to apply what I learn to real world projects. I believe in continuous growth, creativity, and collaboration — qualities that drive me to keep improving and contributing to the ever evolving world of technology.
           </p>
         </div>
       </div>
@@ -330,61 +355,87 @@
       </div>
     </section>
 
-    <!-- ====== SKILLS ====== -->
+    <!-- ====== SKILLS (CV-style) ====== -->
     <section id="skills" aria-labelledby="skills-head">
       <div class="wrap">
         <div class="head">
           <h2 id="skills-head">Skills</h2>
           <div class="sub">Tools & strengths</div>
         </div>
-        <div class="grid cols-3">
-          <div class="panel">
-            <h3>Languages</h3>
-            <p>English, Bengali, Chinese</p>
+        <div class="cv-block">
+          <div class="cv-row">
+            <p class="cv-label">Languages</p>
+            <p class="cv-value">English, Bengali, Chinese</p>
           </div>
-          <div class="panel">
-            <p><strong>Programming Languages:</strong> Python, C</p>
-            <p><strong>Database Systems:</strong> MySQL, MongoDB</p>
+          <div class="cv-row">
+            <p class="cv-label">Programming</p>
+            <p class="cv-value">Python, C</p>
           </div>
-          <div class="panel">
-            <p><strong>Machine Learning:</strong> TensorFlow, PyTorch</p>
-            <p><strong>Deep Learning:</strong> CNNs, RNNs</p>
+          <div class="cv-row">
+            <p class="cv-label">Databases</p>
+            <p class="cv-value">MySQL, MongoDB</p>
+          </div>
+          <div class="cv-row">
+            <p class="cv-label">ML & Deep Learning</p>
+            <ul class="cv-list" style="margin:0">
+              <li>TensorFlow, PyTorch</li>
+              <li>CNNs, RNNs</li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ====== PROJECTS ====== -->
+    <!-- ====== PROJECTS (CV-style) ====== -->
     <section id="projects" aria-labelledby="proj-head">
       <div class="wrap">
         <div class="head">
           <h2 id="proj-head">Projects</h2>
           <div class="sub">Selected work</div>
         </div>
-        <div class="grid cols-3">
-          <article class="panel">
-            <h3>Project Title</h3>
-            <p>1–2 line summary of what you built and why.</p>
-            <div class="tags">
-              <span class="tag">Tag</span><span class="tag">Tag</span><span class="tag">Tag</span>
+        <div class="cv-block">
+          <article class="cv-project">
+            <div class="cv-project-head">
+              <h3 class="cv-project-title">Project Title</h3>
+              <span class="cv-project-meta">Date / Duration</span>
             </div>
-            <p><a class="inline" href="#" target="_blank" rel="noopener">View more →</a></p>
-          </article>
-          <article class="panel">
-            <h3>Another Project</h3>
-            <p>Brief description. Replace with your own details.</p>
-            <div class="tags">
-              <span class="tag">Tag</span><span class="tag">Tag</span>
+            <p class="cv-project-desc">One-line context: what you built and why.</p>
+            <ul class="cv-bullets">
+              <li>Key achievement or responsibility.</li>
+              <li>Another point (e.g. impact, scope).</li>
+            </ul>
+            <div class="cv-project-tags">
+              <span class="tag">Python</span><span class="tag">TensorFlow</span><span class="tag">Git</span>
             </div>
-            <p><a class="inline" href="#" target="_blank" rel="noopener">Demo/Repo →</a></p>
+            <p style="margin:8px 0 0"><a class="inline" href="#" target="_blank" rel="noopener">View more →</a></p>
           </article>
-          <article class="panel">
-            <h3>Activity / Volunteer Work</h3>
-            <p>Optional: community work or achievements.</p>
-            <div class="tags">
+          <article class="cv-project">
+            <div class="cv-project-head">
+              <h3 class="cv-project-title">Another Project</h3>
+              <span class="cv-project-meta">2024</span>
+            </div>
+            <p class="cv-project-desc">Brief description. Replace with your own details.</p>
+            <ul class="cv-bullets">
+              <li>Main contribution or outcome.</li>
+            </ul>
+            <div class="cv-project-tags">
+              <span class="tag">C</span><span class="tag">MySQL</span>
+            </div>
+            <p style="margin:8px 0 0"><a class="inline" href="#" target="_blank" rel="noopener">Demo / Repo →</a></p>
+          </article>
+          <article class="cv-project">
+            <div class="cv-project-head">
+              <h3 class="cv-project-title">Activity / Volunteer Work</h3>
+              <span class="cv-project-meta">Optional</span>
+            </div>
+            <p class="cv-project-desc">Community work or achievements.</p>
+            <ul class="cv-bullets">
+              <li>Role and impact.</li>
+            </ul>
+            <div class="cv-project-tags">
               <span class="tag">Community</span>
             </div>
-            <p><a class="inline" href="#" target="_blank" rel="noopener">Learn more →</a></p>
+            <p style="margin:8px 0 0"><a class="inline" href="#" target="_blank" rel="noopener">Learn more →</a></p>
           </article>
         </div>
       </div>
