--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       --ring: rgba(14,165,233,0.25);
       --radius: 8px;
       --shadow: 0 4px 20px rgba(0,0,0,0.25);
-      --maxw: 960px;
+      --maxw: 1160px;
       --serif: 'Source Serif 4', Georgia, 'Times New Roman', serif;
       --sans: 'Poppins', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
@@ -130,7 +130,7 @@
 
     section{padding:48px 0}
     section .head{display:flex; align-items:flex-end; justify-content:space-between; gap:12px; margin-bottom:24px; padding-bottom:12px; border-bottom:2px solid var(--accent)}
-    h2{margin:0; font-family:var(--serif); font-size: clamp(22px, 2.8vw, 28px); font-weight:700; letter-spacing:-.02em; color:var(--text)}
+    h2{margin:0; font-family:var(--serif); font-size: clamp(22px, 2.8vw, 28px); font-weight:700; letter-spacing:.04em; color:var(--text); text-transform:uppercase}
     .sub{color:var(--muted); font-size:.9rem; font-weight:400}
 
     .grid{display:grid; gap:20px}
@@ -287,7 +287,7 @@
           </div>
 
           <div class="cta">
-            <a class="btn primary" href="resume.pdf" target="_blank" rel="noopener">
+            <a class="btn primary" href="Mahidur's CV.pdf" target="_blank" rel="noopener">
               <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M5 20h14v-2H5m7-14v8l3-3 1.41 1.41L12 18.83l-4.41-4.42L9 11l3 3V4h0z"/></svg>
               Resume
             </a>
@@ -387,7 +387,7 @@
     <section id="projects" aria-labelledby="proj-head">
       <div class="wrap">
         <div class="head">
-          <h2 id="proj-head">Projects</h2>
+          <h2 id="proj-head">Research & Projects</h2>
           <div class="sub">Selected work</div>
         </div>
         <div class="cv-block">
