--- a/index.html
+++ b/index.html
@@ -186,9 +186,18 @@
     .cert-title{margin:0; font-family:var(--serif); font-weight:700; font-size:1.05rem; color:var(--text)}
     .cert-year{margin:0; font-family:var(--sans); font-weight:700; font-size:1rem; color:var(--text)}
     .cert-desc{margin:0; font-size:.95rem; line-height:1.6; color:var(--text)}
-    .cert-viewer-panel{padding:0; overflow:hidden; margin-top:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent)}
-    .cert-iframe{display:block; width:100%; height:480px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent)}
-    @media (max-width:700px){ .cert-iframe{height:360px} }
+    .cert-viewer-panel{padding:0; overflow:hidden; margin-top:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; max-width:520px; margin-left:auto; margin-right:auto}
+    .cert-viewer-panel .cert-iframe{display:block; width:100%; height:220px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none}
+    .cert-viewer-panel::after{content:'Tap to view full size'; display:block; text-align:center; padding:8px; font-size:.8rem; color:var(--muted)}
+    .cert-modal{position:fixed; inset:0; z-index:2000; background:rgba(0,0,0,.85); display:none; align-items:center; justify-content:center; padding:20px}
+    .cert-modal.open{display:flex}
+    .cert-modal-backdrop{position:absolute; inset:0}
+    .cert-modal-inner{position:relative; background:var(--panel); border:1px solid color-mix(in oklab, var(--text) 12%, transparent); border-radius:var(--radius); overflow:hidden; max-width:95vw; max-height:90vh; width:700px}
+    .cert-modal-close{position:absolute; top:8px; right:8px; z-index:2; width:36px; height:36px; border:0; border-radius:var(--radius); background:var(--panel); color:var(--text); cursor:pointer; font-size:1.2rem; line-height:1; box-shadow:var(--shadow)}
+    .cert-modal-close:hover{background:color-mix(in oklab, var(--text) 15%, transparent)}
+    .cert-modal-close:focus{outline:2px solid var(--accent)}
+    .cert-modal iframe{display:block; width:100%; height:85vh; min-height:400px; border:0}
+    @media (max-width:700px){ .cert-viewer-panel .cert-iframe{height:200px} .cert-viewer-panel{max-width:100%} }
 
     form .row{display:grid; gap:12px; grid-template-columns:1fr 1fr}
     form .row > * {min-width:0}
@@ -477,8 +486,15 @@
           </div>
           <p class="cert-desc">Completed structured app development training as an extra-curricular activity.</p>
         </div>
-        <div class="panel cert-viewer-panel">
+        <div class="panel cert-viewer-panel" id="certPreview" role="button" tabindex="0" aria-label="View certificate full size">
           <iframe class="cert-iframe" src="App Development Certificate.pdf#toolbar=0" title="App Development Certificate"></iframe>
+        </div>
+        <div class="cert-modal" id="certModal" aria-hidden="true">
+          <div class="cert-modal-backdrop" id="certModalBackdrop"></div>
+          <div class="cert-modal-inner">
+            <button type="button" class="cert-modal-close" id="certModalClose" aria-label="Close">×</button>
+            <iframe src="App Development Certificate.pdf#toolbar=0" title="App Development Certificate (full size)"></iframe>
+          </div>
         </div>
       </div>
     </section>
@@ -717,6 +733,29 @@
           }
         });
       });
+    }
+
+    // Certificate click to zoom (modal)
+    const certPreview = document.getElementById('certPreview');
+    const certModal = document.getElementById('certModal');
+    const certModalClose = document.getElementById('certModalClose');
+    const certModalBackdrop = document.getElementById('certModalBackdrop');
+    if (certPreview && certModal) {
+      function openCertModal() {
+        certModal.classList.add('open');
+        certModal.setAttribute('aria-hidden', 'false');
+        document.body.style.overflow = 'hidden';
+      }
+      function closeCertModal() {
+        certModal.classList.remove('open');
+        certModal.setAttribute('aria-hidden', 'true');
+        document.body.style.overflow = '';
+      }
+      certPreview.addEventListener('click', openCertModal);
+      certPreview.addEventListener('keydown', function(e) { if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); openCertModal(); } });
+      certModalClose.addEventListener('click', closeCertModal);
+      certModalBackdrop.addEventListener('click', closeCertModal);
+      document.addEventListener('keydown', function(e) { if (e.key === 'Escape' && certModal.classList.contains('open')) closeCertModal(); });
     }
   </script>
 
