--- a/index.html
+++ b/index.html
@@ -185,15 +185,15 @@
     .skills-line:last-child{margin-bottom:0}
     .skills-cat{font-weight:700; color:var(--text)}
 
-    /* Certifications: text block then certificate below */
-    .cert-panel{padding:24px 28px; margin-bottom:20px}
+    /* Certifications: left text, right image, same row */
+    .cert-row{display:grid; grid-template-columns:1fr 1fr; gap:20px; align-items:stretch}
+    .cert-panel{padding:24px 28px; margin:0; display:flex; flex-direction:column; justify-content:center}
     .cert-head{display:flex; justify-content:space-between; align-items:baseline; gap:12px; margin-bottom:10px}
     .cert-title{margin:0; font-family:var(--font); font-weight:700; font-size:1.05rem; color:var(--accent)}
     .cert-year{margin:0; font-family:var(--font); font-weight:700; font-size:1rem; color:var(--text)}
     .cert-desc{margin:0; font-size:.95rem; line-height:1.6; color:var(--text)}
-    .cert-viewer-panel{padding:0; overflow:hidden; margin-top:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; max-width:520px; margin-left:auto; margin-right:auto}
-    .cert-viewer-panel .cert-iframe{display:block; width:100%; height:220px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none}
-    .cert-viewer-panel::after{content:'Tap to view full size'; display:block; text-align:center; padding:8px; font-size:.8rem; color:var(--muted)}
+    .cert-viewer-panel{padding:0; overflow:hidden; margin:0; border:1px solid color-mix(in oklab, var(--text) 10%, transparent); cursor:pointer; display:flex; min-height:220px}
+    .cert-viewer-panel .cert-iframe{flex:1; width:100%; min-height:220px; border:0; background:color-mix(in oklab, var(--text) 5%, transparent); pointer-events:none}
     .cert-modal{position:fixed; inset:0; z-index:2000; background:rgba(0,0,0,.85); display:none; align-items:center; justify-content:center; padding:20px}
     .cert-modal.open{display:flex}
     .cert-modal-backdrop{position:absolute; inset:0}
@@ -202,7 +202,7 @@
     .cert-modal-close:hover{background:color-mix(in oklab, var(--text) 15%, transparent)}
     .cert-modal-close:focus{outline:2px solid var(--accent)}
     .cert-modal iframe{display:block; width:100%; height:85vh; min-height:400px; border:0}
-    @media (max-width:700px){ .cert-viewer-panel .cert-iframe{height:200px} .cert-viewer-panel{max-width:100%} }
+    @media (max-width:700px){ .cert-row{grid-template-columns:1fr} .cert-viewer-panel .cert-iframe{min-height:200px} }
 
     form .row{display:grid; gap:12px; grid-template-columns:1fr 1fr}
     form .row > * {min-width:0}
@@ -473,15 +473,17 @@
           <h2 id="certs-head">Certifications</h2>
           <div class="sub">Credentials</div>
         </div>
-        <div class="panel cert-panel">
-          <div class="cert-head">
-            <h3 class="cert-title">App Development</h3>
-            <span class="cert-year">2023</span>
+        <div class="cert-row">
+          <div class="panel cert-panel">
+            <div class="cert-head">
+              <h3 class="cert-title">App Development</h3>
+              <span class="cert-year">2023</span>
+            </div>
+            <p class="cert-desc">Completed structured app development training as an extra-curricular activity.</p>
           </div>
-          <p class="cert-desc">Completed structured app development training as an extra-curricular activity.</p>
-        </div>
-        <div class="panel cert-viewer-panel" id="certPreview" role="button" tabindex="0" aria-label="View certificate full size">
-          <iframe class="cert-iframe" src="App Development Certificate.pdf#toolbar=0" title="App Development Certificate"></iframe>
+          <div class="panel cert-viewer-panel" id="certPreview" role="button" tabindex="0" aria-label="View certificate full size">
+            <iframe class="cert-iframe" src="App Development Certificate.pdf#toolbar=0" title="App Development Certificate"></iframe>
+          </div>
         </div>
         <div class="cert-modal" id="certModal" aria-hidden="true">
           <div class="cert-modal-backdrop" id="certModalBackdrop"></div>
